<resources>
    <string name="app_name">TimeBank</string>
    <string name="web_client_id">23346206643-a039m6s4d7kn9u8g7eg493vksqjh18ht.apps.googleusercontent.com</string>

    <string name="preference_file_key">profile</string>
    <string name="profile_picture_filename">profile_picture</string>

    <string name="profile_edit_fullname_placeholder">Full name</string>
    <string name="profile_edit_nickname_placeholder">Nickname</string>
    <string name="profile_edit_email_placeholder">mymail@mail.com</string>
    <string name="profile_edit_location_placeholder">Location</string>
    <string name="profile_edit_description_placeholder">Description</string>

    <string name="profile_show_fullname_label">Full name</string>
    <string name="profile_show_nickname_label">Nickname</string>
    <string name="profile_show_email_label">Email</string>
    <string name="profile_show_location_label">Location</string>
    <string name="profile_show_description_label">Description</string>
    <string name="profile_show_skills_label">Your skills</string>
    <string name="profile_ad_show_skills_label">Skills</string>

    <string name="profile_edit_fullname_label">Full name<font color='#FF0000'>*</font></string>
    <string name="profile_edit_nickname_label">Nickname<font color='#FF0000'>*</font></string>
    <string name="profile_edit_email_label">Email<font color='#FF0000'>*</font></string>
    <string name="profile_edit_location_label">Location<font color='#FF0000'>*</font></string>
    <string name="profile_edit_description_label">Description</string>
    <string name="profile_edit_skills_label">Your skills</string>

    <string name="profile_fullname_placeholder">Full name</string>
    <string name="profile_nickname_placeholder">Nickname</string>
    <string name="profile_email_placeholder">mymail@mail.com</string>
    <string name="profile_location_placeholder">Location</string>
    <string name="profile_description_placeholder">Description</string>
    <string name="profile_skills_placeholder">Your skills</string>
    <string name="profile_ad_skills_placeholder">Skills</string>

    <string name="profile_no_skills_selected">You have not selected any skill yet</string>
    <string name="profile_no_description">You have not provided any description yet</string>
    <string name="profile_add_skills">Add skills</string>

    <string name="profile_ad_no_skills_selected">No skills available</string>
    <string name="profile_ad_no_description">No description available</string>

    <string name="fullname_content_descriptor">Your fullname</string>
    <string name="nickname_content_descriptor">Your nickname</string>
    <string name="email_content_descriptor">Your email</string>
    <string name="location_content_descriptor">Your location</string>
    <string name="description_content_descriptor">Your description</string>
    <string name="skills_content_descriptor">Your skills</string>
    <string name="profile_picture_content_description">Your profile picture</string>
    <string name="change_profile_picture_content_description">Change your profile picture</string>

    <string name="time_slot_edit_title_label">Advertisement title<font color='#FF0000'>*</font></string>
    <string name="time_slot_edit_description_label">Description<font color='#FF0000'>*</font></string>
    <string name="time_slot_edit_dateTime_label">Date<font color='#FF0000'>*</font></string>
    <string name="time_slot_edit_from_label">From<font color='#FF0000'>*</font></string>
    <string name="time_slot_edit_to_label">To<font color='#FF0000'>*</font></string>
    <string name="time_slot_edit_location_label">Location<font color='#FF0000'>*</font></string>
    <string name="time_slot_edit_skills_label">Select skills<font color='#FF0000'>*</font></string>


    <string name="change_profile_picture_context_menu_camera">Take a picture</string>
    <string name="change_profile_picture_context_menu_gallery">Choose from gallery</string>
    <string name="search_skill_placeholder">Search skill</string>
    <string name="title_activity_main">Timebank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My advertisements</string>
    <string name="menu_profile">My profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_bar_edit_profile">Edit profile</string>
    <string name="app_bar_delete">Delete</string>
    <string name="app_bar_cancel">Cancel</string>
    <string name="app_bar_add">Add</string>
    <string name="edit_timeslot_advertisment_title_placeholder">Advertisement title</string>
    <string name="edit_timeslot_service_description_placeholder">Service description</string>
    <string name="edit_timeslot_date_and_time_placeholder">Date and time</string>
    <string name="edit_timeslot_duration_placeholder">5h 30min</string>
    <string name="edit_timeslot_location_address_placeholder">Location address</string>
    <string name="timeslot_advertisment_title_placeholder">Advertisement title</string>
    <string name="timeslot_service_description_label">Service description</string>
    <string name="timeslot_service_description_placeholder">Service description</string>
    <string name="timeslot_date_label">Date</string>
    <string name="timeslot_date_placeholder">Date</string>
    <string name="timeslot_from_label">From</string>
    <string name="timeslot_from_placeholder">From time</string>
    <string name="timeslot_to_label">To</string>
    <string name="timeslot_to_placeholder">To time</string>
    <string name="timeslot_location_label">Location</string>
    <string name="timeslot_location_placeholder">Location address</string>
    <string name="timeslot_advertisment_title_list">Advertisement title</string>
    <string name="timeslot_service_description_list">Service description</string>
    <string name="timeslot_date_list">Thu, 26 June, 2022</string>
    <string name="timeslot_from_to_list">08:00 – 14:30</string>
    <string name="timeslot_location_list">Location address</string>
    <string name="nav_drawer_name_placeholder">Full name</string>
    <string name="nav_drawer_email_placeholder">example@email.com</string>
    <string name="nav_drawer_numskills_placeholder">No skills selected</string>
    <string name="skill_advertisements_no_advertisement">There are no posted advertisements</string>
    <string name="skill_advertisement_num_ads"># of advertisements</string>
    <string name="skill_advertisement_name">Skill name</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_online_advertisements">Browse advertisements</string>
    <string name="welcome_to_timebank">Welcome to TimeBank</string>
    <string name="in_order_to_use_this_app_you_must_login_using_one_of_the_options_below">In order to use this app you must login using your Google account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="you_have_not_selected_any_skill_yet_please_update_your_profile_with_atleast_one_skill">You have not selected any skill yet. Please update your profile with at least one skill</string>
    <string name="click_here_to_go_to_your_profile"><font color='#0000EE'><u>Click here to go to your profile</u></font></string>


</resources>