<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/advertisement_skills"
            android:icon="@drawable/ic_baseline_ads_click_24"
            android:title="@string/menu_online_advertisements" />
        <item
            android:id="@+id/advertisements"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />
    </group>
</menu>