<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".fragments.MyAdEditFragment" >

    <TextView
        android:id="@+id/textView50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_slot_edit_title_label" />

    <EditText
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_timeslot_advertisment_title_placeholder"
        android:paddingBottom="12dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_slot_edit_description_label" />

    <EditText
        android:id="@+id/textView53"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_timeslot_service_description_placeholder"
        android:paddingBottom="12dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_slot_edit_dateTime_label" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Select date"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_slot_edit_from_label" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select time"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:paddingEnd="4dp"
                android:paddingBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_slot_edit_to_label" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select time"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:paddingEnd="4dp"
                android:paddingBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView57"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_slot_edit_location_label" />

    <EditText
        android:id="@+id/textView58"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_timeslot_location_address_placeholder"
        android:paddingBottom="12dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_slot_edit_skills_label" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        android:text="@string/you_have_not_selected_any_skill_yet_please_update_your_profile_with_atleast_one_skill" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="12dp"
        android:text="@string/click_here_to_go_to_your_profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/editTimeslotSkillsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="12dp"></LinearLayout>
    </ScrollView>

</LinearLayout>
